--- a/long_read_qc/01-Long_read_QC.Rmd
+++ b/long_read_qc/01-Long_read_QC.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "Illumina Quality Control"
-author: "Matthew Gemmell"
+title: "Long read Quality Control"
+author: "Matthew Gemmell & Helen Hipperson"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: bookdown::gitbook
@@ -12,13 +12,11 @@ link-citations: yes
 
 # Introduction
 ```{r, fig.align = 'center',out.width= '40%', echo=FALSE }
-knitr::include_graphics(path = "figures/nt_base_colours.png", auto_pdf = TRUE)
+knitr::include_graphics(path = "figures/well.png", auto_pdf = TRUE)
 ``` 
 
-This practical session aims to introduce you to Illumina Quality Control. The topics covered are:
+This practical session aims to introduce you to Long read Quality Control. The topics covered are:
 
-- Logging in to our teaching environment
 - Acquiring the workshop data
-- Examples of quality control of genomic data
-- Quality control of Whole genome shotgun data
-- Quality control of 16S rRNA metagenetic data
+- Example of PacBio quality control
+- Example of ONT quality control
