--- a/long_read_qc/02-Intro.Rmd
+++ b/long_read_qc/02-Intro.Rmd
@@ -1,6 +1,6 @@
 # Introduction
 ```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
-knitr::include_graphics(path = "figures/cluster.png", auto_pdf = TRUE)
+knitr::include_graphics(path = "figures/Play.png", auto_pdf = TRUE)
 ``` 
 
 ## The data
@@ -12,5 +12,3 @@ In your home directory carry out the following command:
 ```{bash eval=FALSE}
 
 ```
-
-test
