--- a/long_read_qc/04-ONT.Rmd
+++ b/long_read_qc/04-ONT.Rmd
@@ -3,12 +3,80 @@
 knitr::include_graphics(path = "figures/ONT_logo.png", auto_pdf = TRUE)
 ``` 
 
+## File formats
+
+### Summary file
+
+### Bam file
+
+### fastq file
+
+
 ## Basecalling and demultiplexxing
 
 (Here give a quick intro to guides from basecalling and demultiplexxing of ONT data)
+
+
+## QC of fastq file
+
+Explain why we are focussing on fastq file
+
+Before carrying out any specific commands we will first move into the relevant directory.
+
+```{bash eval=FALSE}
+cd ~/QC_workshop/ONT_QC/
+```
+
+Look in the directory called data and you will notice there are a few directories. You can see the contents of all these directories with the below command.
+
+```{bash eval=FALSE}
+ls data/*
+```
+
+You will notice that each directory has one fastq file. ONT data likes to be organised with data for one sample being in one file. This is reflected in the ONT software we will use that likes to be pointed to a directory with one sample in it.
+
+To start with we will only use the fastq file within the directory called "Acinetobacter". As you may have figured out this contains ONT sequencing data of an Acinetobacter genome. Specifically the data is a subset of the SRA (Sequence Read Archive) Run: SRR7119550.
+
+### NanoStat
+
+First step is to acquire stats of the sequences in our fastq file. We will use NanoStat (https://github.com/wdecoster/nanostat).
+
+NanoStat is one of the scripts of NanoPack (https://github.com/wdecoster/nanopack). We will also use the scripts NanoPlot and NanoFilt.
+
+We want to have a tidy set of directories at the end of this as it would be a large mess to have all the output files in the current directory. We will therefore be making directories and subdirectories to send our output.
+
+```{bash eval=FALSE}
+mkdir nanostats
+```
+
+Finally we will now run NanoStat. The options used are:
+
+- `-n` : File name/path for the output.
+- `-t` : Number of threads the script can use.
+- `--fastq` : zData is in fastq format. Other options that can be used instead are `--fasta`, `--summary`, and `--bam`.
+
+```{bash eval=FALSE}
+NanoStat -n nanostats/Acinetobacter_nanostats.tsv \
+-t 4 --fastq ./data/Acinetobacter_genome_ONT.fastq
+```
+
+Now we can look at the output with any software in Linux that can view text files. In this case we will use the convenient `less`.
+
+```{bash eval=FALSE}
+less nanostats/Acinetobacter_nanostats.tsv
+```
+
+The files contains four section with informative headers. These are:
+
+1. General summary
+  - 
 
 ## Porechop
 
 (Intro to porechop and useage
 Mention here that guppy(?) carries out porechop
 Porechop is no longer supported but additionally there is no alternative)
+
+```{bash eval=FALSE}
+cp -r /pub39/tea/matthew/NEOF/QC_workshop/ ~
+```
