--- a/long_read_qc/Long read Quality Control.Rmd
+++ b/long_read_qc/Long read Quality Control.Rmd
@@ -61,6 +61,27 @@ knitr::include_graphics(path = "figures/ONT_logo.png", auto_pdf = TRUE)
 
 ### fastq file
 
+The fastq file format is thankfully very consistent and so there is no real difference between fastq files for Illumina, PacBio, and ONT data.
+
+All fastq files will contain a number of lines divisible by 4. This is because each entry/sequence will take up four lines consisting of the following information:
+
+1. Header for fastq entry known as the fastq header. 
+    + This always begins with a __‘@’__
+    + This is where you might see the most difference between different data. Different machines and different public databases will use different formats for fastq headers.
+2. Sequence content
+3. Quality header 
+    + Always begins with a ‘+’. Sometimes also contains the same information as fastq header.  
+4. Quality
+    + Each base in the 2nd line will have a corresponding quality value in this line.
+    + Note this uses Phred encoding, of which there are different formats. Most, if not all, new files will use Phred+33 but be careful if you are using older data as it may use a different one. See the "Encoding" section in the following link for more info: https://en.wikipedia.org/wiki/FASTQ_format.
+    +  NOTE: ‘@’ can be used as quality values.
+
+An example of the information of one sequence is:
+
+__\@Sequence 1__  
+__CTGTTAAATACCGACTTGCGTCAGGTGCGTGAACAACTGGGCCGCTTT__  
+__+__  
+__=<<<=>\@\@\@ACDCBCDAC\@BAA\@BA\@BBCBBDA\@BB\@>CD\@A\@B?B\@\@__
 
 ## Basecalling and demultiplexxing
 
@@ -69,12 +90,24 @@ knitr::include_graphics(path = "figures/ONT_logo.png", auto_pdf = TRUE)
 
 ## QC of fastq file
 
-Explain why we are focussing on fastq file
+For this tutorial we will carry out quality control and checking on fastq files. Some QC steps can be carried out on summary files and/or BAM files. However we will be using fastq files for a variety of reasons:
+
+- fastq files are the smallest and so these processes will run quicker and the files will take up less storage. Ideal for a tutorial.
+- You are most likely to be more familiar with fastq files and they are the easiest to work with.
+- You will most likely use fastq files in the future for ONT data. 
+  - If you get your data sequenced by a genomic centre they will most likely give you your data in demultiplexxed fastq files.
+  - ONT machines generally come with in built basecalling and so will most likely provide fastq files as well as the other formats now.
 
 Before carrying out any specific commands we will first move into the relevant directory.
 
 ```{bash eval=FALSE}
 cd ~/QC_workshop/ONT_QC/
+```
+
+Initialise environment. This needs to be done if you start working in a new terminal. Each terminal will only remember what you have told it.
+
+```{bash eval=FALSE}
+. usenanopack-1.1.0
 ```
 
 Look in the directory called data and you will notice there are a few directories. You can see the contents of all these directories with the below command.
@@ -83,7 +116,7 @@ Look in the directory called data and you will notice there are a few directorie
 ls data/*
 ```
 
-You will notice that each directory has one fastq file. ONT data likes to be organised with data for one sample being in one file. This is reflected in the ONT software we will use that likes to be pointed to a directory with one sample in it.
+You will notice that each directory has one fastq file. ONT data likes to be organised with data for one sample being in one file. This is reflected in the ONT software we will use that likes you to point it to a directory with one sample in it.
 
 To start with we will only use the fastq file within the directory called "Acinetobacter". As you may have figured out this contains ONT sequencing data of an Acinetobacter genome. Specifically the data is a subset of the SRA (Sequence Read Archive) Run: SRR7119550.
 
@@ -92,11 +125,11 @@ To start with we will only use the fastq file within the directory called "Acine
 knitr::include_graphics(path = "figures/metrics.png", auto_pdf = TRUE)
 ``` 
 
-First step is to acquire stats of the sequences in our fastq file. We will use NanoStat (https://github.com/wdecoster/nanostat).
+First step is to acquire stats for the sequences in our fastq file. We will use NanoStat (https://github.com/wdecoster/nanostat).
 
 NanoStat is one of the scripts of NanoPack (https://github.com/wdecoster/nanopack). We will also use the scripts NanoPlot and NanoFilt.
 
-We want to have a tidy set of directories at the end of this as it would be a large mess to have all the output files in the current directory. We will therefore be making directories and subdirectories to send our output.
+We want to have a tidy set of directories at the end of this analysis. It would be a large mess to have all the output files in the current directory. We will therefore be making directories and subdirectories to send our output.
 
 ```{bash eval=FALSE}
 mkdir nanostats
@@ -142,8 +175,72 @@ Mention here that guppy(?) carries out porechop
 Porechop is no longer supported but additionally there is no alternative)
 
 ```{bash eval=FALSE}
-
+mkdir porechop
+porechop -t 4 -i data/Acinetobacter -o porechop/Acinetobacter.porechop.fastq
 ```
+
+### NanoPlot
+
+https://github.com/wdecoster/NanoPlot
+
+Prior to running NanoPlot we will make a directory for NanoPlot output. NanoPlot makes a lot of files so within that directory we'll make a subdirectory for the NanoPlot output of porechopped fastq files.
+
+```{bash eval=FALSE}
+mkdir nanoplot
+mkdir nanoplot/porechop
+```
+
+Now to run NanoPlot.
+
+```{bash eval=FALSE}
+NanoPlot -t 4 \
+--fastq porechop/Acinetobacter.porechop.fastq \
+-o nanoplot/porechop -p Acinetobacter_ \
+--plots hex 
+```
+
+May get below error which is file:
+
+/pub37/matt/programs_chos_8/anaconda3/lib/python3.7/_collections_abc.py:702: MatplotlibDeprecationWarning: The global colormaps dictionary is no longer considered public API.
+  return len(self._mapping)
+/pub37/matt/programs_chos_8/anaconda3/lib/python3.7/_collections_abc.py:720: MatplotlibDeprecationWarning: The global colormaps dictionary is no longer considered public API.
+  yield from self._mapping
+
+Check HMTL plot
+
+```{bash eval=FALSE}
+firefox nanoplot/porechop/Acinetobacter_NanoPlot-report.html
+```
+
+### NanoFilt
+
+```{bash eval=FALSE}
+mkdir nanofilt
+```
+
+```{bash eval=FALSE}
+cat porechop/Acinetobacter.porechop.fastq | \
+NanoFilt -l 500 -q 10 > \ nanofilt/Acinetobacter.nanofiltq10minlen500.porechop.fastq
+```
+
+
+### Final check
+
+```{bash eval=FALSE}
+NanoStat -t 4 \
+-n nanostats/Acinetobacter_nanofiltq10minlen500_porechop_nanostats.tsv \
+--fastq nanofilt/Acinetobacter.nanofiltq10minlen500.porechop.fastq
+```
+
+```{bash eval=FALSE}
+mkdir nanoplot/nanofiltq10minlen500_porechop
+
+NanoPlot -t 4 \
+--fastq nanofilt/Acinetobacter.nanofiltq10minlen500.porechop.fastq \
+-o nanoplot/nanofiltq10minlen500_porechop/ -p Acinetobacter_ \
+--plots hex 
+```
+
 
 <!--chapter:end:04-ONT.Rmd-->
 
