--- a/long_read_qc/Long read Quality Control.Rmd
+++ b/long_read_qc/Long read Quality Control.Rmd
@@ -53,22 +53,59 @@ knitr::include_graphics(path = "figures/Pacbio_logo.png", auto_pdf = TRUE)
 knitr::include_graphics(path = "figures/ONT_logo.png", auto_pdf = TRUE)
 ``` 
 
+In this section we are going to carry out a quick QC of ONT data using the tool suite NanoPack and the tool Porechop. We will use a the fastq files 
+
 ## File formats
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/files.png", auto_pdf = TRUE)
+``` 
+
+### Fast5
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/fast5.png", auto_pdf = TRUE)
+``` 
+
+The raw data from ONT machines come as Fast5 (.fast5) files. This contains the signal data from the pore which can be processed into more useful files.
+
+Fast5 files can contain:
+
++ Raw signal data
++ Run metadata
++ fastq-basecalls
++ Other additional analyses
+
+The Fast5 file format is an implementation of the HDF5 file format specifically for ONT sequencing data. For more information on Fast5 and a tool to interface with them see:
+https://github.com/nanoporetech/ont_fast5_api
 
 ### Summary file
 
-### Bam file
+### BAM file
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/bam.png", auto_pdf = TRUE)
+``` 
 
 BAM files (.bam) are the binary version of SAM files (.sam). This means:
 
 - BAM files are not human readable whilst SAM files are.
 - SAM files are larger than BAM.
 
-Generally programs can work on both BAM and SAM files and it is preferable to store data in BAM format over SAM. 
+Generally programs can work on both BAM and SAM files and it is preferable to store data in BAM format over SAM. Even though BAM files are smaller than their matching SAM file they are still very large and can be > 100GB.
 
+SAM stands for "Sequence Alignment/Map" (the B in BAM is Binary). SAM files are tab delimited and contain alignment information. 
+
+It can be useful to contain unaligned reads from sequencing machines (e.g. PacBio and ONT) as they can contain more metadata in the header and per-record auxiliary tags. 
+
+If you are working with SMA/BAM files the following link will prove useful: 
+https://www.htslib.org/
+
+For more information on the SAM and BAM format please see: 
+https://samtools.github.io/hts-specs/SAMv1.pdf
 
 
 ### fastq file
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/fastq.png", auto_pdf = TRUE)
+``` 
 
 The fastq file format is very consistent and so there is no real difference between fastq files for Illumina, PacBio, and ONT data.
 
@@ -93,11 +130,17 @@ __+__
 __=<<<=>\@\@\@ACDCBCDAC\@BAA\@BA\@BBCBBDA\@BB\@>CD\@A\@B?B\@\@__
 
 ## Basecalling and demultiplexxing
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/guppy.png", auto_pdf = TRUE)
+``` 
 
 (Here give a quick intro to guides from basecalling and demultiplexxing of ONT data)
 
 
 ## QC of fastq file
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/qc_inspection.png", auto_pdf = TRUE)
+``` 
 
 For this tutorial we will carry out quality control and checking on fastq files. Some QC steps can be carried out on summary files and/or BAM files. However we will be using fastq files for a variety of reasons:
 
@@ -130,7 +173,7 @@ You will notice that each directory has one fastq file. ONT data likes to be org
 To start with we will only use the fastq file within the directory called "Acinetobacter". As you may have figured out this contains ONT sequencing data of an Acinetobacter genome. Specifically the data is a subset of the SRA (Sequence Read Archive) Run: SRR7119550.
 
 ### NanoStat
-```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
 knitr::include_graphics(path = "figures/metrics.png", auto_pdf = TRUE)
 ``` 
 
@@ -189,6 +232,9 @@ porechop -t 4 -i data/Acinetobacter -o porechop/Acinetobacter.porechop.fastq
 ```
 
 ### NanoPlot
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/nanoplot_hexes.png", auto_pdf = TRUE)
+``` 
 
 https://github.com/wdecoster/NanoPlot
 
@@ -208,12 +254,14 @@ NanoPlot -t 4 \
 --plots hex 
 ```
 
-May get below error which is file:
+May get below error which is fine:
 
+```{bash, eval = FALSE}
 /pub37/matt/programs_chos_8/anaconda3/lib/python3.7/_collections_abc.py:702: MatplotlibDeprecationWarning: The global colormaps dictionary is no longer considered public API.
   return len(self._mapping)
 /pub37/matt/programs_chos_8/anaconda3/lib/python3.7/_collections_abc.py:720: MatplotlibDeprecationWarning: The global colormaps dictionary is no longer considered public API.
   yield from self._mapping
+```
 
 Check HMTL plot
 
@@ -222,6 +270,9 @@ firefox nanoplot/porechop/Acinetobacter_NanoPlot-report.html
 ```
 
 ### NanoFilt
+```{r, fig.align = 'center',out.width= '10%', echo=FALSE }
+knitr::include_graphics(path = "figures/quality_filtering.png", auto_pdf = TRUE)
+```
 
 ```{bash eval=FALSE}
 mkdir nanofilt
@@ -234,6 +285,9 @@ NanoFilt -l 500 -q 10 > \ nanofilt/Acinetobacter.nanofiltq10minlen500.porechop.f
 
 
 ### Final check
+```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
+knitr::include_graphics(path = "figures/finish.png", auto_pdf = TRUE)
+```
 
 ```{bash eval=FALSE}
 NanoStat -t 4 \
