--- a/long_read_qc/04-ONT.Rmd
+++ b/long_read_qc/04-ONT.Rmd
@@ -336,8 +336,9 @@ knitr::include_graphics(path = "figures/finish.png", auto_pdf = TRUE)
 ```
 
 ```{bash eval=FALSE}
+#Make an output directory before running NanoPlot
 mkdir nanoplot/nanofiltq10minlen500_porechop
-
+#Run NanoPlot on the filtered and porechopped data
 NanoPlot -t 4 \
 --fastq nanofilt/Acinetobacter.nanofiltq10minlen500.porechop.fastq \
 -o nanoplot/nanofiltq10minlen500_porechop/ -p Acinetobacter_ \
