--- a/long_read_qc/01-Long_read_QC.Rmd
+++ b/long_read_qc/01-Long_read_QC.Rmd
@@ -10,7 +10,7 @@ biblio-style: apalike
 link-citations: yes
 ---
 
-# Introduction
+# Overview
 ```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
 knitr::include_graphics(path = "figures/well.png", auto_pdf = TRUE)
 ``` 
@@ -20,3 +20,5 @@ This practical session aims to introduce you to Long read Quality Control. The t
 - Acquiring the workshop data
 - Example of PacBio quality control
 - Example of ONT quality control
+- Practice data
+- Further resources
