--- a/long_read_qc/04-ONT.Rmd
+++ b/long_read_qc/04-ONT.Rmd
@@ -358,7 +358,7 @@ knitr::include_graphics(path = "figures/finish.png", auto_pdf = TRUE)
 
 After trimming or filtering reads (quality control) it is always important to carry out a quality check. We will therefore run NanoPlot again.
 
-Note: We are using a long informative output directory name. This is important as we may need to rerun NanoFilt a few more times with different options until we are happy. 
+__Note__: We are using a long informative output directory name. This is important as we may need to rerun NanoFilt a few more times with different options until we are happy. 
 
 ```{bash eval=FALSE}
 #Make an output directory before running NanoPlot
@@ -374,13 +374,13 @@ Ultimately when quality checking we need to take into account how much data we a
 
 Depending on our application the quality of the reads may be less important, or the other way around. The is the same with the amount of reads and bases. What is needed will be clearer when you know what type of data you have. These considerations will be covered in our future workshops of the specific data types
 
-A quick example is data for a genome assembly. For this type of analysis we will want our number of bases to reach a certain coverage. We will want a decent quality but a high coverage can help overcome lower quality (more on this in a future workshop). Generally for ONT assemblies you will want 20X - 100X coverage with a higher coverage producing a better assembly (100x coverage= 100bp sequencing data per 1bp of the genome size). Higher coverages may be worse as it can be too much information for an assembly algorithm to cope with.
+A quick example is data for a genome assembly. For this type of analysis we will want our number of bases to reach a certain coverage. We'll want a decent quality but a high coverage can help overcome lower quality (more on this in a future workshop). Generally for ONT assemblies you will want 20X - 100X coverage with a higher coverage producing a better assembly (100x coverage= 100bp sequencing data per 1bp of the genome size). Higher coverages may be worse as it can be too much information for an assembly algorithm to cope with.
 
-In addition to the amount of bases the length is also important. One read that is 10kbp long is most likely better than 10 reads that are each 1kbp long for a genome assembly. This is beacuse less reads will need to be assembled.
+In addition to the amount of bases, the length of reads is also important. One read that is 10kbp long is most likely better than 10 reads that are each 1kbp long for a genome assembly. This is because less reads will need to be assembled.
 
 Keeping all this in mind, let's say this sequencing is for a genome with a size of 0.5 Mbp (0.5 million base pairs). We want at least 20X coverage (i.e 10,000,000.0 total bases). Do we have this for the data that was porechopped and nanofiltered?
 
-If not, try running NanoFilt with a different choice for `--q` until you do. 
+If not, try running NanoFilt with a different choices for `--q` until you do. 
 
 + What is an option that works to get the desired coverage? 
 + Is the overall quality decent (Mean & Median read quality > 10)?
