--- a/long_read_qc/02-Intro.Rmd
+++ b/long_read_qc/02-Intro.Rmd
@@ -1,4 +1,4 @@
-# Introduction
+# Data
 ```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
 knitr::include_graphics(path = "figures/Play.png", auto_pdf = TRUE)
 ``` 
@@ -6,6 +6,12 @@ knitr::include_graphics(path = "figures/Play.png", auto_pdf = TRUE)
 ## The data
 
 The data for today is in the "QC_workshop" directory that you copied into your home directory ("~") in the Illumina QC day.
+
+Check you have the directory.
+
+```{bash, eval=FALSE}
+ls ~
+```
 
 If you do not have this directory the command to copy it to your home directory is below.
 
