--- a/long_read_qc/03-PB.Rmd
+++ b/long_read_qc/03-PB.Rmd
@@ -3,3 +3,6 @@
 ```{r, fig.align = 'center',out.width= '40%', echo=FALSE }
 knitr::include_graphics(path = "figures/Pacbio_logo.png", auto_pdf = TRUE)
 ``` 
+
+In this section we will quality check PacBio sequencing raw data (BAM files), perform a filter to retain only the longest reads and output the data in fastq format.
+
