--- a/long_read_qc/Long read Quality Control.Rmd
+++ b/long_read_qc/Long read Quality Control.Rmd
@@ -54,6 +54,9 @@ cp -r /pub39/tea/matthew/NEOF/QC_workshop/ ~
 knitr::include_graphics(path = "figures/Pacbio_logo.png", auto_pdf = TRUE)
 ``` 
 
+In this section we will quality check PacBio sequencing raw data (BAM files), perform a filter to retain only the longest reads and output the data in fastq format.
+
+
 <!--chapter:end:03-PB.Rmd-->
 
 # ONT
@@ -426,6 +429,12 @@ NanoPlot -t 4 \
 --fastq nanofilt/Acinetobacter.nanofiltq10minlen500.porechop.fastq \
 -o nanoplot/nanofiltq10minlen500_porechop/ -p Acinetobacter_ \
 --plots hex 
+```
+
+Now inspect the report
+
+```{bash, eval=FALSE}
+firefox nanoplot/nanofiltq10minlen500_porechop/Acinetobacter_NanoPlot-report.html
 ```
 
 Ultimately when quality checking we need to take into account how much data we are left with. We need to make sure we have a good amount of bases and reads for our application. However, we also want to make sure we aren't left with a lot of poor quality data.
